 + Don't place air mines in Shoppa
 * Fixed Capture the Flag error: Flag of first team spawned at second hog instead of first
 * Mutant script shows now appropriate ranking and graph in stats screen
 * Disable Sudden Death for good in Shoppa game scheme, some game styles and mission maps

A Classic Fairytale:
 + Mission 3: Improved mission panel texts to clarify the goals at all time
 + Mission 4: Add infinite skip
 + Mission 6: Add alternate dialogues when killing cyborgs before collecting the crates
 + All missions: Clarify mine timers
 * Mission 2: Fix crash when trying to open ammo menu in opening sequence
 * Mission 3: Fix various Lua errors when playing with 2 hogs and one of them dies
 * Mission 3: Fix broken end sequence after killing cyborg or princess
 * Mission 3: Fix broken sequence of princess being caged
 * Mission 3: All girder crates now have 3 girders each
 * Mission 5: Fix crash when skipping animation while the cyborg talks before the 3rd wave of cannibals starts
 * Mission 6: Block off left cave entrance to stop player to just rope all the way around
 * Mission 6: Fix mines not being able to get triggered in first turn
 * Mission 6: Rewrite misleading mission texts
 * Mission 8: Fix Lua error message at the beginning
 * Mission 10: Fix mission becoming unplayable when all hogs except the traitor died
 * All missions: Add missing texts for translation
 * All missions: Fix incorrect crate types
 * Fix swapped mission preview images of missions 2 and 3

A Space Adventure:
 + A few campaign missions now save your personal best successes (e.g. fastest finish in Hard Flying) which get shown after you finish them agin
 + Add skip to a few missions where it doesn't hurt
 + Menu: Show 2 flowers over fully completed planets (with side missions)
 * A frozen adventure: Fix bazooka and excess freezers (>6) not retained over checkpoints
 * A frozen adventure: Fix and improve poorly written messages